Incluindo o EndPoint de Search by name para tela de gerenciamento de usuario
