# src/main/resources/static/openapi.yaml
@@ -518,6 +518,29 @@ paths:
                 $ref: '#/components/schemas/User'
         '500':
           description: Server error
+  /user/search:
+    get:
+      tags:
+        - User Service
+      summary: Retrieves a user by Name
+      operationId: getUserByName
+      security:
+        - bearerAuth: [ ]
+      parameters:
+        - name: name
+          in: query
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: User found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '500':
+          description: Server error
     delete:
       tags:
         - User Service
